# tree-sitter-arkts

./: .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  fuzz.yml  lint.yml  publish.yml
bindings/c/: tree-sitter-arkts.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  binding_test.js  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_arkts/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterArkTSTests/: TreeSitterArkTSTests.swift
bindings/swift/arkts/TreeSitterArkTS/: arkts.h
common/: common.mak  define-grammar.js
examples/: demo.ets
queries/: highlights.scm  tags.scm
scripts/: bump-version.mjs  extract-corpus-fixtures.mjs
src/: grammar.json  node-types.json  scanner.c
test/: hmosworld_parse_test.js
test/corpus/: arkts.txt  declarations.txt  expressions.txt  functions.txt  javascript.txt  types.txt
