[package]
name = "tree-sitter-arkts"
description = "ArkTS grammar for tree-sitter"
version = "0.0.1-beta.0"
authors = [
  "richerfu <southorange0929@foxmail.com>",
  "Max Brunsfeld <maxbrunsfeld@gmail.com>",
  "Amaan Qureshi <amaanq12@gmail.com>",
]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "arkts", "ets"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-arkts"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "LICENSE",
  "common",
  "bindings/rust",
  "grammar.js",
  "src",
  "queries/*",
  "./tree-sitter.json",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1"

[dev-dependencies]
tree-sitter = "0.24"
